--- a/index.html
+++ b/index.html
@@ -5,10 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="icon" type="image/x-icon" href="./Images/logo.png">
-    <link rel="stylesheet" src="./style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <div id="frame">
+        <div id="screen">
+            <div id="sub-text">Past result  </div>
+            <div id="main-text">Press something</div>
+        </div>
+        <div id="buttons-container">
+            <!-- 1st row -->
+            <button class="buttons" id="button-7"></button>
+            <button class="buttons" id="button-8"></button>
+            <button class="buttons" id="button-9"></button>
+            <button class="buttons" id="button-delete"></button>
+            <button class="buttons" id="button-AC"></button>
+            <!-- 2nd row -->
+            <button class="buttons" id="button-4"></button>
+            <button class="buttons" id="button-5"></button>
+            <button class="buttons" id="button-6"></button>
+            <button class="buttons" id="button-mutiply"></button>
+            <button class="buttons" id="button-divide"></button>
+            <!-- 3rd row -->
+            <button class="buttons" id="button-1"></button>
+            <button class="buttons" id="button-2"></button>
+            <button class="buttons" id="button-3"></button>
+            <button class="buttons" id="button-plus"></button>
+            <button class="buttons" id="button-minus"></button>
+            <!-- 4th row -->
+            <button class="buttons" id="button-0"></button>
+            <button class="buttons" id="button-dot"></button>
+            <button class="buttons" id="button-percent"></button>
+            <button class="buttons" id="button-Ans"></button>
+            <button class="buttons" id="button-equal"></button>
+        </div>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
