--- a/index.html
+++ b/index.html
@@ -10,33 +10,33 @@
 <body>
     <div id="frame">
         <div id="screen">
-            <div id="sub-text">Past result  </div>
-            <div id="main-text">Press something</div>
+            <div id="sub-text"> </div>
+            <div id="main-text"></div>
         </div>
         <div id="button-container">
             <!-- 1st row -->
-            <button class="buttons" id="button-7">7</button>
-            <button class="buttons" id="button-8">8</button>
-            <button class="buttons" id="button-9">9</button>
-            <button class="buttons" id="button-delete">DEL</button>
-            <button class="buttons" id="button-AC">AC</button>
+            <button class="buttons nums" id="button-7">7</button>
+            <button class="buttons nums" id="button-8">8</button>
+            <button class="buttons nums" id="button-9">9</button>
+            <button class="buttons function" id="button-delete">DEL</button>
+            <button class="buttons function" id="button-AC">AC</button>
             <!-- 2nd row -->
-            <button class="buttons" id="button-4">4</button>
-            <button class="buttons" id="button-5">5</button>
-            <button class="buttons" id="button-6">6</button>
-            <button class="buttons" id="button-mutiply"> * </button>
-            <button class="buttons" id="button-divide"> / </button>
+            <button class="buttons nums" id="button-4">4</button>
+            <button class="buttons nums" id="button-5">5</button>
+            <button class="buttons nums" id="button-6">6</button>
+            <button class="buttons math-symbol" id="button-mutiply">*</button>
+            <button class="buttons math-symbol" id="button-divide">/</button>
             <!-- 3rd row -->
-            <button class="buttons" id="button-1">1</button>
-            <button class="buttons" id="button-2">2</button>
-            <button class="buttons" id="button-3">3</button>
-            <button class="buttons" id="button-plus"> + </button>
-            <button class="buttons" id="button-minus"> - </button>
+            <button class="buttons nums" id="button-1">1</button>
+            <button class="buttons nums" id="button-2">2</button>
+            <button class="buttons nums" id="button-3">3</button>
+            <button class="buttons math-symbol" id="button-plus">+</button>
+            <button class="buttons math-symbol" id="button-minus">-</button>
             <!-- 4th row -->
-            <button class="buttons" id="button-0">0</button>
-            <button class="buttons" id="button-dot">.</button>
-            <button class="buttons" id="button-percent">%</button>
-            <button class="buttons" id="button-Ans">Ans</button>
+            <button class="buttons nums" id="button-0">0</button>
+            <button class="buttons nums" id="button-dot">.</button>
+            <button class="buttons nums" id="button-percent">%</button>
+            <button class="buttons function" id="button-Ans">Ans</button>
             <button class="buttons" id="button-equal">=</button>
         </div>
     </div>
