Make input float possible and someother things but forgot what those things is

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <!-- 4th row -->
             <button class="buttons nums" id="button-0">0</button>
             <button class="buttons nums" id="button-dot">.</button>
-            <button class="buttons nums" id="button-percent">%</button>
+            <button class="buttons function" id="button-flip">+/-</button>
             <button class="buttons function" id="button-Ans">Ans</button>
             <button class="buttons" id="button-equal">=</button>
         </div>
