--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <button class="buttons nums" id="button-dot">.</button>
             <button class="buttons function" id="button-flip">+/-</button>
             <button class="buttons function" id="button-Ans">Ans</button>
-            <button class="buttons" id="button-equal">=</button>
+            <button class="buttons function" id="button-equal">=</button>
         </div>
     </div>
     <script src="./script.js"></script>
